Lesson 7: add product categories (Web & API); (#9)
upd open api docs
