# resources/views/catalog/catalog_list.blade.php
@@ -1,0 +1,12 @@
+@foreach($categories as $category)
+    <ul>
+        <li>
+            <a href="{{ route('catalog', ['slug' => $category->slug]) }}">
+                {{ $category->name }}
+            </a>
+            @if($category->children)
+                @include('catalog.catalog_list', ['categories' => $category->children])
+            @endif
+        </li>
+    </ul>
+@endforeach
